[project]
name = "ResuLLMe-fork"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Michael Booth", email = "michael@databooth.com.au"},
]
dependencies = [
    "openai>=1.6.1",
    "pdfminer-six>=20231228",
    "python-docx>=1.1.0",
    "streamlit>=1.29.0",
    "watchdog>=3.0.0",
    "Jinja2>=3.1.2",
    "docx2txt>=0.8",
    "streamlit-ext>=0.1.9",
    "stqdm>=0.0.5",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-type = "application"
